# BioNLP26

./: .gitignore  README.md
dx_bench/: config.yaml  pyproject.toml
dx_bench/dx_bench/: config.py  runner.py
dx_bench/scripts/: import_legacy_llama70b_names.py  import_llama70b_csv_artifact.py  policy_eval_dxbench.py  prepare_rarebench_dxbench_inputs.py  run_dataset_suite.py  watch_and_launch_med42_70b.sh
reranker/: PROMPTS_AND_RESULTS.md  README.md  inspect_medllama_pp2p_v2.py  inspect_medllama_pp2p_v2_promotions.py  proposal5_contrastive.py  proposal5_contrastive_training.py  pyproject.toml  run_dataset_analysis.py  run_hms_analysis.py  run_nested_cv.py  run_norm_analysis.py  run_phenodp_api_rerank.py  run_phenodp_benchmark.py  run_pp2prompt_eval.py  run_rarebench_api_rerank.py  run_rarebench_mlp.py  run_zscore_cv.py
reranker/data/: benchmark_ids_10_smoke.txt  benchmark_ids_6901_phenodp_compatible_min3hpo.txt  not_in_top10_ids.txt
reranker/phenodp_gemma3_pipeline/: __init__.py  api_reranker.py  data_loader.py  io_utils.py  metrics.py  models.py  prompting.py  rerankers.py  utils.py
reranker/scripts/: run_6901_phenodp_gemma3_no_genes.sh  run_6901_phenodp_gemma3_no_genes_twostage.sh  run_6901_phenodp_gemma3_pos_hpo_only_twostage.sh  run_6901_phenodp_gemma3_prompt_v4.sh  run_6901_phenodp_gemma3_prompt_v5.sh  run_allg2p_leftover_gemma4_pp2prompt_v2.sh  run_allg2p_leftover_gemma4_v7.sh  run_allg2p_rem_gemma4_pp2prompt_v2.sh  run_allg2p_rem_gemma4_v7.sh  run_archive2_gemma4_pp2prompt_v2.sh  run_archive2_gemma4_v7.sh  run_gemma3_pp2prompt_v2_full.sh  run_v5_part_a.sh  (+13 more)
(+173 files in other folders)
